# Streamer-UI

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  bfh-audio-streamer.cmake  doxyfile  example-streamer-ui.conf
res/: qml.qrc  qtquickcontrols2.conf
res/element/: Feather.qml  FeatherButton.qml  ImageButton.qml  ProgressBar.qml
res/layout/: main.qml
res/model/: MenuSelection.qml
res/view/: Menu.qml  TrackInfo.qml  UnderConstruction.qml  main.qml
src/: IBackendConnector.cpp  IBackendConnector.h  MopidyConnector.cpp  MopidyConnector.h  MopidyMpdConnector.cpp  MopidyMpdConnector.h  MpdConnector.cpp  MpdConnector.h  main.cpp
src/controller/: BackendConnector.cpp  BackendConnector.h  Backend_connector.cpp  Backend_connector.h  Controller.cpp  Controller.h  IBackendConnector.cpp  IBackendConnector.h  I_backend_connector.cpp  I_backend_connector.h  MopidyConnector.cpp  MopidyConnector.h  MopidyMpdConnector.cpp  MopidyMpdConnector.h  Mopidy_connector.cpp  Mopidy_connector.h  Mopidy_mpd_connector.cpp  Mopidy_mpd_connector.h  MpdConnector.cpp  MpdConnector.h  Mpd_connector.cpp  Mpd_connector.h  Websocket.cpp  Websocket.h
src/controller/data/: Data_player_state.cpp  Data_player_state.h  Data_track_info.cpp  Data_track_info.h  TrackInfo.cpp  TrackInfo.h  TrackState.cpp  TrackState.h
src/model/: Model.cpp  Model.h  Model_macros.h  Player_state.cpp  Player_state.h  Track_info.cpp  Track_info.h
src/tools/: Config_loader.cpp  Config_loader.h
